@startuml modelo-de-datos
!theme plain
title Que se guarda\nLas clases de Java, y las tablas que hay abajo

skinparam shadowing false
skinparam nodesep 20
skinparam ranksep 40
hide circle

package "En Java" {

  class Company {
    id : Long
    ats : Ats
    slug : String
    .. lo que deja el sondeo ..
    name : String
    boardStatus : BoardStatus
    lastProbedAt : Instant
  }

  class Vacancy {
    id : Long
    company : Company
    externalId : Long
    .. el puesto ..
    title : String
    description : String
    location : String
    department : String
    url : String
    language : String
    .. la plata ..
    payMinCents : Long
    payMaxCents : Long
    payCurrency : String
    payTitle : String
    .. fechas ..
    firstPublished : Instant
    updatedAt : Instant
  }

  class NormalizedVacancy {
    id : Long
    vacancy : Vacancy
    .. lo que dicen los extractores ..
    title : String
    seniority : Seniority
    workMode : WorkMode
  }

  enum Ats {
    GREENHOUSE
  }

  enum BoardStatus {
    NOT_FOUND
    EMPTY
    ACTIVE
  }

  enum Seniority {
    ENTRY
    JUNIOR
    SEMI_SENIOR
    MID
    SENIOR
    STAFF
    PRINCIPAL
    LEVEL_2
    LEVEL_3
  }

  enum WorkMode {
    REMOTE
    FULLY_REMOTE
    HYBRID
    ONSITE
  }

  Company --> Ats
  Company --> BoardStatus
  Vacancy --> Company : sabe de que empresa es.\nLa empresa NO tiene\nla lista de sus vacantes.
  NormalizedVacancy --> Vacancy : una por vacante
  NormalizedVacancy --> Seniority
  NormalizedVacancy --> WorkMode
}

package "En Postgres" {

  entity "company" as tc {
    id : bigint  <<PK>>
    --
    ats : varchar
    slug : varchar
    --
    name : varchar
    board_status : varchar
    last_probed_at : timestamptz
    --
    **unique (ats, slug)**
  }

  entity "vacancy" as tv {
    id : bigint  <<PK>>
    --
    company_id : bigint  <<FK>>
    external_id : bigint
    --
    title : varchar
    description : text
    location : text
    department : varchar
    url : text
    language : varchar
    --
    pay_min_cents : bigint
    pay_max_cents : bigint
    pay_currency : varchar
    pay_title : varchar
    --
    first_published : timestamptz
    updated_at : timestamptz
    --
    **unique (company_id, external_id)**
  }

  entity "normalized_vacancy" as tn {
    id : bigint  <<PK>>
    --
    vacancy_id : bigint  <<FK, unique>>
    --
    title : varchar
    seniority : varchar
    work_mode : varchar
    --
    **on delete cascade**
  }

  entity "company_seq / vacancy_seq /\nnormalized_vacancy_seq" as s {
    dan los id de a 50 por vez
  }

}

Company ..> tc : Flyway crea y modifica las tablas.\nAl arrancar, Hibernate\ncompara y falla si no coinciden.

@enduml
